public/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities; 

.navbar-link{
    @apply bg-green-500 rounded-lg p-2 mx-1 text-gray-900 font-bold hover:bg-green-400 hover:text-white;
    font-family: Copperplate, Helvetica, sans-serif;
}

.default-box{
    @apply bg-white rounded-lg m-1;
}

.num-input{
    @apply bg-gray-200 w-12 rounded text-center;
    -moz-appearance: none;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

